@@ -7,6 +7,7 @@ Version 0.56
 - Fixed a bug with pasting text into the link editor
 - Fixed a beachballing issue
 - Fixed an issue with initial contact list display of contacts with names pulled from the address book
+- Profiles no longer revert to default font after changing the size or color
 - Added a submenu in the Edit and contextual menus for inserting emoticons
 - Improved Message View preferences
 
